READ MORE 버튼 수정
버튼 링크 수정

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <p class="MG030 text-center text-padding">언제 어디서든 산후조리원에 있는 우리 아기를 <br/>
               실시간 라이브 영상으로 만날 수 있어요 </p>
             <div class="border border-3 border-light read-more">
-              <a href="/bebecam.html"><p>READ MORE</p></a>
+              <a href="bebecam.html"><p>READ MORE</p></a>
             </div>
             
             <!-- 모바일 -->
@@ -365,7 +365,7 @@
             <p class="MG030 text-center text-padding">언제 어디서든 산후조리원에 있는 우리 아기를 <br/>
               실시간 라이브 영상으로 만날 수 있어요 </p>
             <div class="border border-8 border-light read-more">
-              <a href="/bebecam.html"><p>READ MORE</p></a>
+              <a href="bebecam.html"><p>READ MORE</p></a>
             </div>
 
             <a href="https://www.youtube.com/watch?v=Ji31ibYy0OM&ab_channel=i-vory%EC%95%84%EC%9D%B4%EB%B3%B4%EB%A6%AC" target="_blank"><img class="video mobile-Video" src="./assets/img/png/bebecam_video_mobile.png" alt="이미지"  /></a>
@@ -397,7 +397,7 @@
             <p class="MG030 text-padding">나에게 맞는 우리동네 산후조리원 찾기 및 전국 산후조리원 정보와 <br/>
               엄마들의 리얼 이용후기를 볼 수 있어요 </p>
             <div class="border border-3 border-light read-more">
-              <a href="/carecenter.html"><p>READ MORE</p></a>
+              <a href="carecenter.html"><p>READ MORE</p></a>
             </div>
           </div>
         </div>
@@ -416,7 +416,7 @@
             <p class="MG030 text-padding">나에게 맞는 우리동네 산후조리원 찾기 및 전국 산후조리원 정보와 <br/>
               엄마들의 리얼 이용후기를 볼 수 있어요 </p>
             <div class="border border-8 border-light read-more">
-              <a href="/carecenter.html"><p>READ MORE</p></a>
+              <a href="carecenter.html"><p>READ MORE</p></a>
             </div>
           </div>
         </div>
@@ -442,7 +442,7 @@
             <h3 class="MG070 brand-name">아이보리뷰</h3>
             <p class="MG030 text-padding">새롭고 인기있는 육아템의 리얼 체험 / 리얼 리뷰를 만나보세요</p>
             <div class="border border-3 border-light read-more">
-              <a href="/view.html"><p>READ MORE</p></a>
+              <a href="view.html"><p>READ MORE</p></a>
             </div>
           </div>
         </div>
@@ -462,7 +462,7 @@
             <h3 class="MG070 brand-name">아이보리뷰</h3>
             <p class="MG030 text-padding">새롭고 인기있는 육아템의 리얼 체험 / 리얼 리뷰를 만나보세요</p>
             <div class="border border-8 border-light read-more">
-              <a href="/view.html"><p>READ MORE</p></a>
+              <a href="view.html"><p>READ MORE</p></a>
             </div>
           </div>
         </div>
@@ -484,7 +484,7 @@
             <h3 class="MG070 brand-name">아이보리몰</h3>
             <p class="MG030 text-padding">좋은 아이템을 최저가에 구매하세요</p>
             <div class="border border-3 border-light read-more">
-              <a href="/mall.html"><p>READ MORE</p></a>
+              <a href="mall.html"><p>READ MORE</p></a>
             </div>
           </div>
         </div>
@@ -503,7 +503,7 @@
             <h3 class="MG070 brand-name">아이보리몰</h3>
             <p class="MG030 text-padding">좋은 아이템을 최저가에 구매하세요</p>
             <div class="border border-8 border-light read-more">
-              <a href="/mall.html"><p>READ MORE</p></a>
+              <a href="mall.html"><p>READ MORE</p></a>
             </div>
           </div>
         </div>
